--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="hero__image animate-on-scroll">
                     <div class="hero__avatar">
-                        <img src="https://miregx.github.io/placeholder.png.png" alt="Іваненко Іван" />
+                        <img src="https://miregx.github.io/RDHU3SC_portfolio/placeholder.png" alt="Іваненко Іван" />
                     </div>
                 </div>
             </div>
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="about__content">
                 <div class="about__image animate-on-scroll">
-                    <img src="https://miregx.github.io/placeholder.png" alt="Про мене" class="about__photo">
+                    <img src="https://miregx.github.io/RDHU3SC_portfolio/placeholder.png" alt="Про мене" class="about__photo">
                 </div>
                 <div class="about__text">
                     <h2 class="section-title animate-on-scroll">Про мене</h2>
@@ -113,7 +113,7 @@
             <div class="projects__grid">
                 <div class="project-card animate-on-scroll" data-project="1">
                     <div class="project-card__image">
-                        <img src="https://miregx.github.io/placeholder.png.png" alt="E-commerce платформа">
+                        <img src="https://miregx.github.io/RDHU3SC_portfolio/placeholder.png" alt="E-commerce платформа">
                     </div>
                     <div class="project-card__content">
                         <h3 class="project-card__title">E-commerce платформа</h3>
@@ -130,7 +130,7 @@
 
                 <div class="project-card animate-on-scroll" data-project="2">
                     <div class="project-card__image">
-                        <img src="https://miregx.github.io/placeholder.png.png" alt="Корпоративний сайт">
+                        <img src="https://miregx.github.io/RDHU3SC_portfolio/placeholder.png" alt="Корпоративний сайт">
                     </div>
                     <div class="project-card__content">
                         <h3 class="project-card__title">Корпоративний сайт</h3>
@@ -147,7 +147,7 @@
 
                 <div class="project-card animate-on-scroll" data-project="3">
                     <div class="project-card__image">
-                        <img src="https://miregx.github.io/placeholder.png.png" alt="Мобільний додаток">
+                        <img src="https://miregx.github.io/RDHU3SC_portfolio/placeholder.png" alt="Мобільний додаток">
                     </div>
                     <div class="project-card__content">
                         <h3 class="project-card__title">Мобільний додаток</h3>
@@ -164,7 +164,7 @@
 
                 <div class="project-card animate-on-scroll" data-project="4">
                     <div class="project-card__image">
-                        <img src="https://miregx.github.io/placeholder.png.png" alt="Веб-додаток">
+                        <img src="https://miregx.github.io/RDHU3SC_portfolio/placeholder.png" alt="Веб-додаток">
                     </div>
                     <div class="project-card__content">
                         <h3 class="project-card__title">Веб-додаток аналітики</h3>
